--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://njmobley.github.io/"
+baseURL = "https://njmobley.github.io/"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "Student Statistician"
