updated colors and added image

--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ enableEmoji = false
 [params]
 title = "Nicholas Mobley"
 author = "Nicholas J Mobley"
-description = "Indiana University Statistics Major"
+description = "Indiana University Bloomington:  Statistics & Computer Science Major"
 profilePicture = "/images/profile.jpg"
 keywords = ""
 favicon = "favicons/"
